// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LinkSell Link Sell 1`] = `
.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  color: #FF1900;
  padding: 2px 4px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  background-color: #FF1900;
}

<a
  className="c0 c1"
  href="/somewhere"
  onClick={[Function]}
>
  <span
    className="c2"
  >
    Sell
  </span>
</a>
`;

exports[`Storyshots Molecules | LinkSell Link Sell Disabled 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  color: #A0A09B;
  padding: 2px 4px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
  disabled={true}
>
  <span
    className="c1"
  >
    Sell
  </span>
</span>
`;

exports[`Storyshots Molecules | LinkSell Link Sell With Rel As Nofollow 1`] = `
.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c1 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  color: #FF1900;
  padding: 2px 4px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  background-color: #FF1900;
}

<a
  className="c0 c1"
  href="/somewhere"
  onClick={[Function]}
  rel="nofollow"
>
  <span
    className="c2"
  >
    Sell
  </span>
</a>
`;
